<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LookUpDataSyncActivity">

    <LinearLayout
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/sync_projects"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_button_green_version_two"
            android:text="@string/sync_projects_lookup"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="23dp"
            android:textStyle="normal"/>

        <Button
            android:id="@+id/sync_organisations"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_button_green_version_two"
            android:text="@string/sync_organisations_lookup"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="23dp"
            android:textStyle="normal"/>

        <Button
            android:id="@+id/sync_components"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_button_green_version_two"
            android:text="@string/sync_components_lookup"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="23dp"
            android:textStyle="normal"/>

        <Button
            android:id="@+id/sync_sub_components"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_button_green_version_two"
            android:text="@string/sync_sub_component_lookup"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="23dp"
            android:textStyle="normal"/>

        <Button
            android:id="@+id/sync_activities"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_button_green_version_two"
            android:text="@string/sync_activities_lookup"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="23dp"
            android:textStyle="normal"/>

        <Button
            android:id="@+id/sync_activity_status"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_button_green_version_two"
            android:text="@string/sync_activity_status_lookup"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="23dp"
            android:textStyle="normal"/>

        <Button
            android:id="@+id/sync_provinces"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_button_green_version_two"
            android:text="@string/sync_provinces_lookup"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="23dp"
            android:visibility="gone"
            android:textStyle="normal"/>
        <Button
            android:id="@+id/sync_districts"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_button_green_version_two"
            android:text="@string/sync_districts_lookup"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="23dp"
            android:textStyle="normal"/>
        <Button
            android:id="@+id/sync_facilitators"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_button_green_version_two"
            android:text="@string/sync_facilitators_lookup"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="23dp"
            android:textStyle="normal"/>
        <Button
            android:id="@+id/sync_project_districts"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_button_green_version_two"
            android:text="@string/sync_project_districts_lookup"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="23dp"
            android:textStyle="normal"/>
        <Button
            android:id="@+id/sync_schemes"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_button_green_version_two"
            android:text="@string/sync_schemes_lookup"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="23dp"
            android:textStyle="normal"/>
        <Button
            android:id="@+id/sync_budget_list"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_button_green_version_two"
            android:text="@string/sync_budget_list_lookup"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="23dp"
            android:visibility="gone"
            android:textStyle="normal"/>

        <Button
            android:id="@+id/sync_sub_comp_activities"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_button_green_version_two"
            android:text="@string/sync_sub_comp_activities_lookup"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="23dp"
            android:visibility="gone"
            android:textStyle="normal"/>

        <Button
            android:id="@+id/sync_wards"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_button_green_version_two"
            android:text="Sync Wards"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="23dp"
            android:textStyle="normal"/>

        <Button
            android:id="@+id/sync_genders"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_button_green_version_two"
            android:text="Sync Gender"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="23dp"
            android:textStyle="normal"/>

        <Button
            android:id="@+id/file_types"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_button_green_version_two"
            android:text="Sync File Types"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="23dp"
            android:textStyle="normal"/>
    </LinearLayout>

</ScrollView>